--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h2>Troubleshooting tool works!</h2>
-<br>
-<p>Q & A Application</p>
+<mat-toolbar color="primary">
+  <div>
+   
+      <input class="search" placeholder="Search here" />
+  </div>
+</mat-toolbar>
