--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
@@ -1,1 +1,15 @@
-
+.mat-toolbar {
+  width: auto;
+  height: 130px;
+  justify-content: center;
+}
+.search{
+    border: 0cm;
+    padding: 20px;
+    color: #000000;
+    width: 700px;
+    border-radius: 5px;
+    background-image: "search.jpg";
+    background-repeat: no-repeat;
+    background-position: right;
+}
