search bar addition

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
-  <div>
-   
-      <input class="search" placeholder="Search here" />
+  <div class="searchbar">
+    <input class="search" placeholder="Search here" />
+    <button class="searchbutton" mat-raised-button>Search</button>
   </div>
 </mat-toolbar>
