--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
@@ -3,13 +3,24 @@
   height: 130px;
   justify-content: center;
 }
-.search{
-    border: 0cm;
-    padding: 20px;
-    color: #000000;
-    width: 700px;
-    border-radius: 5px;
-    background-image: "search.jpg";
-    background-repeat: no-repeat;
-    background-position: right;
+.search {
+  border: 0cm;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #000000;
+  width: 700px;
+  border-radius: 5px;
 }
+.searchbutton{
+  margin-left: 10px;
+  background-color: rgb(72, 121, 224);
+  height: auto;
+}
+.searchbar {
+  border: 0cm;
+  background-color: primary;
+  border-radius: 5px;
+}
+
