--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
@@ -15,7 +15,7 @@
 }
 .searchbutton{
   margin-left: 10px;
-  background-color: rgb(72, 121, 224);
+  background-color: #ffb8b8;
   height: auto;
 }
 .searchbar {
