List of categories and Changes in datamodel

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -4,3 +4,4 @@
     <button class="searchbutton" mat-raised-button>Search</button>
   </div>
 </mat-toolbar>
+<app-list-of-categories></app-list-of-categories>
