--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -4,4 +4,5 @@
     <button class="searchbutton" mat-raised-button>Search</button>
   </div>
 </mat-toolbar>
-<app-list-of-categories></app-list-of-categories>
+<router-outlet></router-outlet>
+<!-- <app-list-of-categories></app-list-of-categories> -->
