--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
@@ -1,6 +1,6 @@
 <h2 class="head">List of Categories</h2>
 <div class="categories">
-  <button mat-raised-button class="category_btn" *ngFor="let list of getResponse()">
+  <button mat-raised-button class="category_btn" *ngFor="let list of getResponse()" click=onClick()>
     {{ list }}
   </button>
 </div>
