--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
@@ -14,7 +14,7 @@
 }
 .searchbutton{
   margin-left: 10px;
-  background-color: #ffb8b8;
+  background-color:lightblue;
   height: auto;
 }
 .searchbar {
