--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -4,5 +4,6 @@
     <button class="searchbutton" mat-raised-button>Search</button>
   </div>
 </mat-toolbar>
+<!-- <app-category-of-questions></app-category-of-questions> -->
 <router-outlet></router-outlet>
 <!-- <app-list-of-categories></app-list-of-categories> -->
