--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
@@ -3,13 +3,22 @@
     justify-content: center;
     text-align: center;
 }
-.categories{
-    text-align: center;
-    height: 100px;
+.categories {
+    display: flex;
+    justify-content: center;
 }
-.category_btn{
+.button{
+    margin-left: 15px;
+    margin-top: 15px;
+    border-radius: 15px;
+    background-color: lightskyblue;
+    padding: 10px;
+}
+.button-text{
     text-align: center;
-    height: 50px;
+    display: table-cell;
+    vertical-align: middle;
+    height: 40px;
     width: 100px;
-    margin-right: 20px;
+    border-radius: 15px;
 }
