--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
@@ -6,6 +6,7 @@
 .categories {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .button{
     margin-left: 15px;
@@ -13,6 +14,8 @@
     border-radius: 15px;
     background-color: lightskyblue;
     padding: 10px;
+    box-shadow: 1px 1px 1px #4b4b4b54;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 .button-text{
     text-align: center;
