--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.css
@@ -1,25 +1,24 @@
-.mat-toolbar {
-  height: 130px;
-  justify-content: center;
+ul.breadcrumb {
+  padding: 10px 16px;
+  list-style: none;
+  margin-top: 0px;
+  background-color: #eee;
 }
-.search {
-  border: 0cm;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  color: #000000;
-  width: 700px;
-  border-radius: 5px;
+ul.breadcrumb li {
+  display: inline;
+  font-size: medium;
+  color: #0275d8;
 }
-.searchbutton{
-  margin-left: 10px;
-  background-color:lightblue;
-  height: auto;
-}
-.searchbar {
-  border: 0cm;
-  background-color: primary;
-  border-radius: 5px;
+ul.breadcrumb li+li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
+ul.breadcrumb li:hover {
+  color: #01447e;
+  font-weight: bolder;
+}
+.toolbar{
+  height: 100px;
+}
