--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -1,6 +1,6 @@
 <div class="list-of-questions">
   <ul>
-    <mat-card class="question-card" *ngFor="let list of getQuestions()">
+    <mat-card class="question-card" *ngFor="let list of getQuestions()" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)">
       <div class="question-item">
         <div class="answer-layout">
           <div class="no-of-answers">{{ list.answerCount }}</div>
@@ -9,7 +9,7 @@
         <div class="question-layout">
           <div class="question">{{ list.Question.question }}</div>
           <div class="description">{{ list.Question.description }}</div>
-          <span class="chips" *ngFor="let tag of list.tags">{{ tag }}</span>
+            <span *ngFor="let tag of getTags(list.tags)" class="chips"> {{ tag }}</span>
         </div>
       </div>
     </mat-card>
