Date format changed to long

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -11,7 +11,7 @@
       <div class="answer-count">{{ response.answerCount }} Answers</div>
       <div class="posted-details">
         <div class="posted">Posted on</div>
-        <div class="posted-date">{{response.Question.creationDate}}</div> 
+        <div class="posted-date">{{response.Question.creationDate | date :'mediumDate'}}</div> 
       </div>
     </div>
     <mat-divider></mat-divider>
