--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.css
@@ -22,12 +22,12 @@
   float: left;
 }
 .answer-text {
-  color: lightslategrey;
+  color: green;
   font-size: small;
   margin-top: 5px;
 }
 .no-of-answers {
-  color: darkgreen;
+  color: green;
   font-weight: bolder;
   font-size: x-large;
 }
@@ -63,9 +63,9 @@
 
 .chips {
   font-size: smaller;
-  color: blue;
+  color: #fff;
   position: relative;
-  background-color: lightblue;
+  background-color: #1776bf;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
@@ -74,4 +74,20 @@
   margin-bottom: 10px;
   margin-right: 10px;
   border-radius: 15px;
+  cursor: pointer;
+}
+.chips:hover {
+  font-size: smaller;
+  color: #fff;
+  position: relative;
+  background-color: #0f4c7b;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border-radius: 15px;
+  cursor: pointer;
 }
