--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -1,15 +1,15 @@
 <div class="list-of-questions">
   <ul>
-    <mat-card class="question-card" *ngFor="let list of getQuestions()" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)">
+    <mat-card class="question-card" *ngFor="let list of getQuestions()" >
       <div class="question-item">
         <div class="answer-layout">
           <div class="no-of-answers">{{ list.answerCount }}</div>
           <div class="answer-text">Answers</div>
         </div>
         <div class="question-layout">
-          <div class="question">{{ list.Question.question }}</div>
+          <a class="question" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
           <div class="description">{{ list.Question.description }}</div>
-            <span *ngFor="let tag of getTags(list.tags)" class="chips"> {{ tag }}</span>
+            <span *ngFor="let tag of getTags(list.tags)" class="chips"(click)="onTagClick(tag)"> {{ tag }}</span>
         </div>
       </div>
     </mat-card>
