--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -3,29 +3,42 @@
     <div class="question">{{ response.Question.question }}</div>
     <div class="description">{{ response.Question.description }}</div>
     <div>
-      <span *ngFor="let tag of response.tags" class="chips"> {{ tag }}</span>
-     
+      <span
+        *ngFor="let tag of response.tags"
+        class="chips"
+        (click)="onTagClick(tag)"
+      >
+        {{ tag }}</span
+      >
     </div>
     <!-- <div>{{Question.creationDate}}</div> -->
     <div class="qn-details">
       <div class="answer-count">{{ response.answerCount }} Answers</div>
       <div class="posted-details">
         <div class="posted">Posted on</div>
-        <div class="posted-date">{{response.Question.creationDate | date :'mediumDate'}}</div> 
+        <div class="posted-date">
+          {{ response.Question.creationDate | date: "mediumDate" }}
+        </div>
       </div>
     </div>
     <mat-divider></mat-divider>
-    <div class="answers" *ngFor="let item of response.Answers">
-      <div class="vote-layout">
-        <mat-icon>arrow_drop_up</mat-icon>
-        <div class="vote">{{ item.voteCount }}</div>
-        <div>Votes</div>
-        <mat-icon>arrow_drop_down</mat-icon>
+    <div class="list-of-answers" *ngFor="let item of response.Answers">
+      <div class="answers">
+        <div class="vote-layout">
+          <mat-icon>arrow_drop_up</mat-icon>
+          <div class="vote">{{ item.voteCount }}</div>
+          <div>Votes</div>
+          <mat-icon>arrow_drop_down</mat-icon>
+        </div>
+        <div class="answer-layout">
+          <div class="answer" *ngIf="item.isApproved">Approved</div>
+          <div class="description">{{ item.description }}</div>
+        </div>
       </div>
-      <div class="answer-layout">
-        <div class="answer" *ngIf="item.isApproved">Approved</div>
-        <div class="description">{{ item.description }}</div>
-      </div>
+      <mat-divider></mat-divider>
+    </div>
+    <div>
+      <button class="dlt-button">Add answer</button>
     </div>
   </mat-card>
 </div>
