--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -38,7 +38,7 @@
       <mat-divider></mat-divider>
     </div>
     <div>
-      <button class="dlt-button">Add answer</button>
+      <button mat-button class="dlt-button">Add answer</button>
     </div>
   </mat-card>
 </div>
