Formatting and Organizing code

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -11,9 +11,8 @@
           placeholder="Search here"
           (input)="search($event.target.value)"
           input
-          (keyup.enter)="onEnter()"
-        />
-
+          (keyup.enter)="onEnter()"/>
+       
         <button class="dlt-button" (click)="onEnter()" mat-raised-button>
           Search
         </button>
