--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -37,8 +37,14 @@
       </div>
       <mat-divider></mat-divider>
     </div>
-    <div>
-      <button mat-button class="dlt-button">Add answer</button>
+    <div >
+      <button mat-button class="dlt-button" (click)="display()">Add answer</button><br><br><br>
+      <div style="display:none" id="display">
+        <form><textarea id="answer" style="height:300px;width:800px;" placeholder="Add your answers here" required></textarea>
+        <button mat-button class="dlt-button" type="submit" (click)="post_ans()">Add your answer</button>
+        </form>
+      </div>
     </div>
   </mat-card>
+
 </div>
