--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.css
@@ -58,7 +58,7 @@
   padding-left: 16px;
   white-space: nowrap;
   overflow: hidden;
-  background-color: rgb(247, 247, 247);
+  background-color: #f7f7f7;
 }
 
 .question-layout:hover {
