--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/styles.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/styles.css
@@ -5,7 +5,7 @@ body{
   }
 
   /* ----------------------------------------------------------------------------------------------------- */
-
+/* 
   .dlt-accordion {
   	list-style: none;
   	padding: 0;
@@ -7374,4 +7374,4 @@ body{
 
   form{
   align:center;
-  }
+  } */
