--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -1,95 +1,26 @@
-<div id="mySidenav" class="sidenav">
-  <a class="closebtn"  style="cursor:pointer" (click)="closeNav()">&times;</a>
-
-  <form>
-    <div class="form-group">
-      <label >Question</label>
-      <input type="text" class="dlt-input-group search" id="question">
-    </div>
-    <div class="form-group">
-      <label  >Question Description</label>
-      <input type="text" class="dlt-input-group search" id="description" >
-    </div>
-    <div class="form-group">
-      <label >Categories</label><br>
-      <select name="categories" style="width:50%" id="categories">
-        <option value="easy">easy</option>
-        <option value="medium">medium</option>
-        <option value="difficult">difficult</option>
-
-      </select>
-    </div>
-    <mat-form-field class="example-chip-list">
-      <mat-chip-list #chipList aria-label="Fruit selection">
-        <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable"
-                  [removable]="removable" (removed)="remove(fruit)">
-          {{fruit.name}}
-          <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-        </mat-chip>
-        <input placeholder="New Tags..." id="tag"
-               [matChipInputFor]="chipList"
-               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-               [matChipInputAddOnBlur]="addOnBlur"
-               (matChipInputTokenEnd)="add($event)">
-      </mat-chip-list>
-    </mat-form-field>
-
-
-    <!-- <div [formGroup]="form">
-      <div class="editor-tag" (click)="focusTagInput()">
-        <span class="tag-item" *ngFor="let tag of tags">
-                {{tag}}
-                <span class="remove-tag" (click)="removeTag(tag)">×</span>
-              </span>
-              <input MatChipInput
-
-               type="text"
-              class="input-tag"
-              (keyup)="onKeyUp($event)"
-              formControlName="tag">
-            </div>
-      </div> -->
-
-
-    <div class="col-lg-12 loginbttm" >
-
-      <div class="col-lg-6 login-btm login-button" >
-        <button type="submit" class="dlt-button "  (click)="post_ques()">POST</button>
-      </div>
-    </div>
-  </form>
-</div>
-<span style="font-size:20px;cursor:pointer" (click)="openNav()">&#9776; Add a Question</span>
-<div class="container " id="display" style="display:none;">
-  <div class="row">
-    <div class="col-sm-6 col-md-4 col-md-offset-4">
-      <h1 class="text-center login-title">Add Question</h1>
-      <div class="account-wall">
-
-        <form class="form-signin">
-          <input type="text" class="form-control" placeholder="Question" required autofocus>
-          <input type="text" class="form-control" placeholder="Question description" required>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">
-            post</button>
-          <span class="clearfix"></span>
-        </form>
-      </div>
-
-    </div>
-  </div>
-</div>
 <div class="list-of-questions">
   <ul>
-    <mat-card class="question-card" *ngFor="let list of getQuestions()" >
+    <mat-card class="question-card" *ngFor="let list of getQuestions()">
       <div class="question-item">
         <div class="answer-layout">
           <div class="no-of-answers">{{ list.answerCount }}</div>
           <div class="answer-text">Answers</div>
         </div>
         <div class="question-layout">
-          <a class="question" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
+          <a
+            class="question"
+            [routerLink]="['/qnas', list.Question.id]"
+            (click)="onClick(list.Question.id)"
+            >{{ list.Question.question }}</a
+          >
           <div class="description">{{ list.Question.description }}</div>
-            <span *ngFor="let tag of getTags(list.tags)" class="chips"(click)="onTagClick(tag)"> {{ tag }}</span>
+          <span
+            *ngFor="let tag of getTags(list.tags)"
+            class="chips"
+            (click)="onTagClick(tag)"
+          >
+            {{ tag }}</span
+          >
         </div>
       </div>
     </mat-card>
