Optimizing add answer

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -13,7 +13,7 @@
     </div>
     <!-- <div>{{Question.creationDate}}</div> -->
     <div class="qn-details">
-      <div class="answer-count">{{ response.answerCount }} Answers</div>
+      <div ><p class="answer-count" id="answercount">{{ response.answerCount }} Answers</p></div>
       <div class="posted-details">
         <div class="posted">Posted on</div>
         <div class="posted-date">
