--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
@@ -136,6 +136,7 @@
   background-color: #1776bf;
 	font-family: Roboto, Helvetica, Arial, sans-serif;
   margin-left: 10px;
+  margin-top: 10px;
   display: inline-block
 }
 
