App routing corrections

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -9,7 +9,7 @@
         <div class="question-layout">
           <a
             class="question"
-            [routerLink]="['/qnas', list.Question.id]"
+            [routerLink]="['/qna', list.Question.id]"
             (click)="onClick(list.Question.id)"
             >{{ list.Question.question }}</a
           >
