--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/search/search.component.html
@@ -24,7 +24,7 @@
             <div class="card">
               <div
                 class="question"
-                [routerLink]="['/qnas', list.Question.id]"
+                [routerLink]="['/qna', list.Question.id]"
                 (click)="onClick(list.Question.id)"
               >
                 {{ list.Question.question }}
