--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.html
@@ -14,7 +14,7 @@
     class="matcard-categories"
     *ngFor="let list of getResponse()"
     (click)="onClick(list)"
-    [routerLink]="['/categories', list]"
+    [routerLink]="['/category', list]"
   >
     <p class="button-text">{{ list }}</p>
   </mat-card>
