App routing corrections

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/app.component.html
@@ -10,9 +10,9 @@
      </ol> -->
       <ul class="breadcrumb">
         <li><span [routerLink]="['']">Home</span></li>
-        <li><span [routerLink]="['/categories']">Categories</span></li>
+        <li><span [routerLink]="['/category']">Categories</span></li>
         <li>
-          <span [routerLink]="['/categories', category]">{{
+          <span [routerLink]="['/category', category]">{{
             getCategory()
           }}</span>
         </li>
