--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.css
@@ -42,8 +42,9 @@
   }
   
   .question {
-    color: darkslategray;
-    font-weight: bold;
+    color: #1776bf;
+  text-decoration: none;
+  font-weight: bolder;
     font-size: medium;
     white-space: nowrap;
     text-overflow: ellipsis;
