--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
@@ -10,13 +10,14 @@
   flex-wrap: wrap;
 }
 .matcard-categories {
+  cursor: pointer;
   width: max-content;
   margin-left: 24px;
-  margin-top: 15px;
+  margin-top: 24px;
   border-radius: 5px;
   background-color: #1776bf;
   color: #fff;
-  padding: 20px;
+  padding: 30px;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
@@ -58,12 +59,12 @@
 }
 
 .dlt-button-post {
-    color: #ffffff;
-    background-color: #1776bf;
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    margin-right: 10px;
-    margin-left: 16px;
-  }
+  color: #ffffff;
+  background-color: #1776bf;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  margin-right: 10px;
+  margin-left: 16px;
+}
 
 label {
   font-size: 12px;
