--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="question-layout">
             <a class="question" [routerLink]="['/qna', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
-            <div class="description">{{ list.Question.description }}</div>
+            <div class="description" [routerLink]="['/qna', list.Question.id]" (click)= "onClick(list.Question.id)" >{{ list.Question.description }}</div>
               <span *ngFor="let tag of getTags(list.tags)" class="chips" (click)="onTagClick(tag)"> {{ tag }}</span>
           </div>
         </div>
