Text editor for answers

--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/list-of-categories/list-of-categories.component.css
@@ -35,6 +35,12 @@
   border-radius: 15px;
 }
 
+.fab{
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+}
+
 /* ----------------------Added by preethi------------------------------------------------- */
 
 .dlt-button {
