--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
@@ -1,9 +1,9 @@
 .parent {
   display: flex;
   flex-direction: column;
-  width:50%;
+  width: 70%;
   margin-left: auto;
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .textarea {
@@ -12,9 +12,8 @@
   margin-right: 16px;
 }
 
-.richtexteditor{
-  margin-right: 16px;
-  margin-left: 16px;
+.richtexteditor {
+  align-self: center;
 }
 .search {
   width: 100%;
@@ -44,12 +43,11 @@
 
 .dlt-button-post {
   margin-top: 10px;
-  width:50px;
+  width: 50px;
   margin-left: auto;
   margin-right: auto;
-   color: #ffffff;
-   background-color: #1776bf;
-   font-family: Roboto, Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  background-color: #1776bf;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   margin-right: 10px;
-  }
-
+}
