--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.css
@@ -22,8 +22,6 @@
   margin-right: 20px;
 }
 
-
-
 .answer {
   margin-top: 10px;
   color: #657506;
@@ -36,6 +34,9 @@
   width: min-content;
   white-space: nowrap;
   background-color: #eafa8f;
+}
+.richtexteditor {
+  margin-top: 16px;
 }
 
 .qn-details {
@@ -60,12 +61,9 @@
 .description {
   margin-top: 10px;
   margin-bottom: 10px;
-  color: lightslategrey;
-  font-weight: lighter;
   font-size: smaller;
   white-space: pre-wrap;
 }
-
 
 .chips {
   font-size: smaller;
@@ -130,16 +128,16 @@
   margin-left: 10px;
   float: right;
   margin-top: 10px;
-  display: inline-block
+  display: inline-block;
 }
 
 .dlt-button-post-answer {
   color: #fff;
   background-color: #1776bf;
-	font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   margin-left: 10px;
   margin-top: 10px;
-  display: inline-block
+  display: inline-block;
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
