--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/question-details/question-details.component.html
@@ -1,6 +1,6 @@
 <div class="parent">
   <mat-card class="layout">
-    <div class="question">{{ response.Question.question }}</div>    
+    <div class="question">{{ response.Question.question }}</div>
     <div class="description">{{ response.Question.description }}</div>
     <div>
       <span
@@ -13,7 +13,11 @@
     </div>
     <!-- <div>{{Question.creationDate}}</div> -->
     <div class="qn-details">
-      <div ><p class="answer-count" id="answercount">{{ response.answerCount }} Answers</p></div>
+      <div>
+        <p class="answer-count" id="answercount">
+          {{ response.answerCount }} Answers
+        </p>
+      </div>
       <div class="posted-details">
         <div class="posted">Posted on</div>
         <div class="posted-date">
@@ -32,19 +36,33 @@
         </div>
         <div class="answer-layout">
           <div class="answer" *ngIf="item.isApproved">Approved</div>
-          <div class="description">{{ item.description }}</div>
+          <div class="description" [innerHTML]="item.description"></div>
         </div>
       </div>
       <mat-divider></mat-divider>
     </div>
-    <div >
-      <button mat-button class="dlt-button" (click)="display()">Add answer</button><br><br><br>
+    <div>
+      <ejs-richtexteditor
+        class="richtexteditor"
+        width="100%"
+        height="350px"
+        [(ngModel)]="val"
+      ></ejs-richtexteditor>
+      <button
+        mat-button
+        class="dlt-button-post-answer"
+        type="submit"
+        (click)="post_ans()"
+      >
+        Post Answer
+      </button>
+      <!-- <button mat-button class="dlt-button" (click)="display()">Add answer</button><br><br><br>
+
       <div style="display:none" id="display">
         <form><textarea id="answer" style="height:300px;width:800px;" placeholder="Add your answers here" required></textarea>
-        <button mat-button class="dlt-button-post-answer" type="submit" (click)="post_ans()">Post Answer</button>
+        
         </form>
-      </div>
+      </div> -->
     </div>
   </mat-card>
-
 </div>
