--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -62,12 +62,11 @@
   <label class="textarea">Solution</label>
   <br />
   <ejs-richtexteditor
-    [formControl]="answer"
     class="richtexteditor"
     width="95%"
     height="350px"
-    [(ngModel)]="val"
-  ></ejs-richtexteditor>
+    [(ngModel)]="val">
+  </ejs-richtexteditor>
 
   <button
     mat-button
